# oxideav-generator

./: CHANGELOG.md  Cargo.toml  README.md
benches/: framefill.rs
src/: filters.rs  lib.rs  shorthand.rs  source.rs
src/audio/: mod.rs  synth.rs  wav.rs
src/image/: fractal.rs  gradient.rs  grating.rs  label.rs  mod.rs  noise.rs  palette.rs  pattern.rs  plasma.rs  png.rs  ramp.rs  xc.rs
src/video/: colorwheel.rs  fractal_zoom.rs  gradient_animate.rs  mod.rs  movingbox.rs  scroll.rs  smptebars.rs  snow.rs  testsrc.rs  zoneplate.rs
tests/: catalogue_determinism.rs  external_parity.rs  ffmpeg_compat.rs  filter_zero_input.rs  shorthand_translate.rs  source_uri.rs
