[package]
name = "oxideav-generator"
version = "0.1.5"
edition = "2021"
rust-version = "1.80"
license = "MIT"
repository = "https://github.com/OxideAV/oxideav-generator"
authors = ["Mark Karpeles"]
description = "Pure-Rust synthetic media generator (sine waves, gradients, fractals, test patterns) for the oxideav framework — usable as a generate:// URI source or as a zero-input filter"

readme = "README.md"
homepage = "https://github.com/OxideAV/oxideav-generator"
keywords = ["multimedia", "synthesis", "testpatterns", "fractal", "pure-rust"]
categories = ["multimedia"]

[dependencies]
oxideav-core = "0.1"
serde_json = "1"
# `label:` generator — uses oxideav-scribe to shape text into vector
# glyph nodes and oxideav-raster to render them onto an RGBA canvas.
# Default-on; opt out with `--no-default-features` to avoid the bundled
# DejaVu Sans Mono font (~340 KB) and the scribe + raster dep tree if
# the embedding context doesn't need text.
oxideav-scribe = { version = "0.1", optional = true }
oxideav-raster = { version = "0.1", optional = true }

[features]
default = ["label"]
label = ["dep:oxideav-scribe", "dep:oxideav-raster"]
